--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,7 @@ html, body {
   color: var(--white);
   font-weight: 600;
 }
+/* PREVIEW-PANEL */
 .preview-panel {
   grid-column: 2 / 3;
   border: #363738 1px solid;
@@ -137,6 +138,7 @@ html, body {
   font-weight: 500;
   font-size: 14px;
   padding: 2px 8px;
+  cursor: pointer;
 }
 .preview-panel__sections-item img{
   filter: brightness(0) saturate(100%) invert(58%) sepia(0%) saturate(0%) hue-rotate(187deg) brightness(93%) contrast(89%);
@@ -155,17 +157,6 @@ html, body {
 }
 .preview-panel__content-buttons {
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -199,11 +190,55 @@ html, body {
 .aside div {
   margin-bottom: 16px;
 }
+/* FRIENDS */
 .friends {
   grid-column: 3 / 4;
-  background-color: #0671b8bd;
-  border: 1px solid red;
+  padding: 8px;
+  color: var(--white);
+  font-size: 14px;
+  border: #363738 1px solid;
+  background: var(--bacground-color-elements);
+  border-radius: 10px;
+  max-height: 312px;
 }
+.friends__online-heading, .friends__heading{
+  padding: 3px 12px 1px;
+  margin: 12px 0 8px;
+  font-weight: 500;
+}
+.friends__online-heading span, .friends__heading span{
+  margin: 0 0 0 6px;
+  color: var(--gray-color);
+}
+.friends__online-wrapper, .friends__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 4px;
+}
+.friends__online-wrapper-item, .friends__wrapper-item{
+  font-weight: 300;
+}
+.friends__online-wrapper-item img, .friends__wrapper-item img{
+  width: 64px;
+  height: 64px;
+  border-radius: 50px;
+}
+.friends-line {
+}
+.friends__heading {
+}
+.friends__wrapper {
+}
+.friends__wrapper-item {
+}
+
+
+
+
+
+
+
 .gifts {
   grid-column: 3 / 4;
   background-color: #0671b8bd;
