--- a/css/style.css
+++ b/css/style.css
@@ -839,15 +839,12 @@ img {
   html, body {
     background: #0A0A0A;
   }
-  .header {
+  .header, .new-post, .profile__online-item, .posts__element-comment, .profile-button, .posts__element-footer, .posts__block-list-element{
     display: none;
   }
   .container{
     max-width: 100%;
     padding: 0;
-  }
-  .posts__element-comment{
-    display: none;
   }
   .profile{
     margin-top: 0;
@@ -855,17 +852,8 @@ img {
     border-top-right-radius: 0;
     flex-direction: column;
   }
-  .profile-button {
-    display: none;
-  }
-  .posts__element-footer{
-    border-bottom: none;
-  }
   .posts__block-list-element--mobile {
     display: block;
-  }
-  .posts__block-list-element{
-    display: none;
   }
   .posts__block-list{
     padding: 12px 16px;
@@ -892,9 +880,6 @@ img {
   }
   .preview-panel__content{
     padding: 8px 0;
-  }
-  .new-post, .profile__online-item {
-    display: none;
   }
   .new-post--mobile{
     display: block;
